objects/Reg_Setting__c.object
<CustomObject>
    <fields>
        <fullName>Column_Name__c</fullName>
        <label>Column Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Message__c</fullName>
        <label>Custom Message</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Defaullt_Label__c</fullName>
        <label>Defaullt Label</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delete_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>BLN_Event__c</referenceTo>
        <relationshipName>Reg_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Label__c</fullName>
        <label>Group Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Order__c</fullName>
        <label>Group Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Images__c</fullName>
        <label>Images</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Included__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Pool__c</fullName>
        <label>Item Pool</label>
        <referenceTo>Item_Pool__c</referenceTo>
        <relationshipName>Reg_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <referenceTo>BLN_Item__c</referenceTo>
        <relationshipName>Reg_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Label_Name__c</fullName>
        <label>Label Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <defaultValue>30</defaultValue>
        <label>Display Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organizer__c</fullName>
        <label>Organizer</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipName>Reg_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Read_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Message__c</fullName>
        <label>Sales Message</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Setting_Type__c</fullName>
        <label>Setting Type</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Quick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration Tab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eventdexapp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RegistrationLink</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Table_Name__c</fullName>
        <label>Table Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tag_Id__c</fullName>
        <label>Tag Id</label>
        <referenceTo>Hash_Tag__c</referenceTo>
        <relationshipName>Reg_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Update_Access__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Update Access</label>
        <type>Checkbox</type>
    </fields>
    <label>BLN Reg Setting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Group_Order__c</columns>
        <columns>Table_Name__c</columns>
        <columns>Label_Name__c</columns>
        <columns>Event__c</columns>
        <columns>Group_Name__c</columns>
        <columns>Item__c</columns>
        <columns>Included__c</columns>
        <columns>Required__c</columns>
        <columns>Column_Name__c</columns>
        <columns>Item_Pool__c</columns>
        <columns>Order__c</columns>
        <columns>Setting_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Default</fullName>
        <columns>NAME</columns>
        <columns>Group_Order__c</columns>
        <columns>Table_Name__c</columns>
        <columns>Label_Name__c</columns>
        <columns>Event__c</columns>
        <columns>Group_Name__c</columns>
        <columns>Item__c</columns>
        <columns>Included__c</columns>
        <columns>Required__c</columns>
        <columns>Column_Name__c</columns>
        <columns>Item_Pool__c</columns>
        <columns>Order__c</columns>
        <columns>Setting_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Setting_Type__c</field>
            <operation>equals</operation>
            <value>Registration Tab</value>
        </filters>
        <label>Default Event Settings</label>
    </listViews>
    <listViews>
        <fullName>KROQPresents</fullName>
        <columns>NAME</columns>
        <columns>Group_Order__c</columns>
        <columns>Table_Name__c</columns>
        <columns>Label_Name__c</columns>
        <columns>Event__c</columns>
        <columns>Group_Name__c</columns>
        <columns>Item__c</columns>
        <columns>Included__c</columns>
        <columns>Required__c</columns>
        <columns>Column_Name__c</columns>
        <columns>Item_Pool__c</columns>
        <columns>Order__c</columns>
        <columns>Setting_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event__c</field>
            <operation>equals</operation>
            <value>KROQ Presents The 2014 Sunset Strip Music Festival</value>
        </filters>
        <label>KROQ Presents The 2014 Sunset Strip Musi</label>
    </listViews>
    <listViews>
        <fullName>Laxman_Event</fullName>
        <columns>NAME</columns>
        <columns>Table_Name__c</columns>
        <columns>Label_Name__c</columns>
        <columns>Column_Name__c</columns>
        <columns>Order__c</columns>
        <columns>Included__c</columns>
        <columns>Required__c</columns>
        <columns>Group_Name__c</columns>
        <columns>Group_Order__c</columns>
        <columns>Setting_Type__c</columns>
        <columns>Item_Pool__c</columns>
        <columns>Item__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event__c</field>
            <operation>equals</operation>
            <value>Default Event(Boothleads)</value>
        </filters>
        <label>Laxman Event</label>
    </listViews>
    <nameField>
        <displayFormat>RS-{000000}</displayFormat>
        <label>Reg Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN Reg Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>